<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/activity_horizontal_margin">

    <!--todo: add app icon at the top-->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <!--Name-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_nametxtInput_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/signup_name_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_name_str"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <!--Email-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_emailtxtInput_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/signup_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_email_str"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <!--Chama name-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_chamanameTxtInp_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/signup_chamaname_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_chamaname_str"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <!--Role-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_roletxtInput_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/signup_role_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_role_str"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <!--Phone Number-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_phoneNoTxtInp_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/signup_phoneNo_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_phoneNo_str"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <!--Password-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_pass_txtInput_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/signup_password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/signup_password_str"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <!--Retype Password-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_retypepass_txtInput_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/signup_retypepassword_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/signup_retypepassword_str"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/signup_button_id"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/holo_blue"
        android:text="@string/signup_button_str"
        android:textColor="@android:color/black"
        android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>