<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <!--type of activity, withdrawal, deposit-->
        <TextView
            android:id="@+id/chamaactivity_type"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/chamaactivity_type"
            android:layout_height="wrap_content" />

        <!--amount of deposit-->
        <TextView
            android:id="@+id/chamaactivity_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/chamaactivity_amount"/>
    </LinearLayout>

    <!--who deposited, withdrew-->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:weightSum="2"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/chamaactivityperson_name"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/gray"
            android:text="@string/chamaactivityperson_name"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/chamaactivity_date"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="@color/gray"
            android:text="@string/chamaactivity_date"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>