<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--date-->
    <TextView
        android:text="@string/full_statement_title_date"
        style="@style/TextComponent.ItemRow"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--image view -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/full_statement_item_img"
            android:src="@mipmap/ic_launcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:contentDescription="@null"/>

        <!--Name of transactor and details of transaction-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/full_statement_item_transactor"
                android:text="@string/full_statement_item_transactor"
                style="@style/TextComponent.ItemRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/full_statement_item_details"
                android:text="@string/full_statement_item_details"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--amount-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/full_statement_item_amount"
                android:text="@string/full_statement_item_amount"
                style="@style/TextComponent.ItemRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
