<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="65dp"
    android:id="@+id/registerstep1_form_container"
    android:background="@color/navajo_white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--header-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_new_account"
                android:textSize="25sp"/>
        </LinearLayout>

        <!--registration form-->
        <LinearLayout
            android:id="@+id/registrationform_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Name-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_nametxtInput_id"
                android:layout_width="match_parent"
                android:layout_marginBottom="25dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_name_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_name_str"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>

            <!--Email-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_emailtxtInput_id"
                android:layout_width="match_parent"
                android:layout_marginBottom="25dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_email_str"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>

            <!--Phone Number-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_phoneNoTxtInp_id"
                android:layout_width="match_parent"
                android:layout_marginBottom="25dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_phoneNo_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_phoneNo_str"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>

            <!--Password-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_pass_txtInput_id"
                android:layout_width="match_parent"
                android:layout_marginBottom="25dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_password_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/signup_password_str"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>

            <!--Retype Password-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_retypepass_txtInput_id"
                android:layout_width="match_parent"
                android:layout_marginBottom="25dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_retypepassword_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/signup_retypepassword_str"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>
